--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "version": 2,
+  "builds": [{ "src": "**/*.html", "use": "@vercel/static" }],
+  "routes": [{ "src": "/", "dest": "/online-shopping-cart.html" }]
 }
